@@ -40,6 +40,10 @@ done
 # (i.e. we want to test failed writes not at the start).
 truncate -s1MiB file.slop || framework_failure_
 truncate -s+1 file.slop || framework_failure_
-shred --exact -n1 file.slop || fail=1
+shred --exact -n2 file.slop || fail=1
+
+# make sure direct I/O is handled appropriately at start of file
+truncate -s1 file.slop || framework_failure_
+shred --exact -n2 file.slop || fail=1
 
 Exit $fail
